added search html

--- a/search/templates/search.html
+++ b/search/templates/search.html
@@ -185,7 +185,7 @@
     <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
     </div>
     <form method="POST" action="search">
-            {% csrf_token %}
+    {% csrf_token %}
     <input class="search-bar" type="text" name="search" autofocus x-webkit-speech/>
     <div class="search-nav">
     <div class="search-button">
@@ -195,7 +195,18 @@
     </div>
     </div>
     </div>
-    
+
+    {% if final_result %}
+    <b style="padding-left: 50px; padding-right: 50px; color: #646464;">Web Results</b>
+    {% for result in final_result %}
+    <div style="padding-left: 50px; padding-right: 50px;">
+        <h3 style="color: blue;"><a href="{{ result.1 }}">{{ result.0 }}</a></h3>
+        <h3 style="color: green;">{{ result.1 }}</h3>
+        <h3>{{ result.2 }}</h3>
+    </div><br><br>
+    {% endfor %}
+    {% endif %}
+
     <div class="footer">
     <footer class="bottom-toolbar">
     <nav class="footer-left">
